--- a/assets/style.css
+++ b/assets/style.css
@@ -83,7 +83,8 @@ body {
 	font-family: 'Spectral';
 	font-weight: 800;
 	font-style: italic;
-	width: 60%;
+	width: 100%;
+	font-size: 1rem;
 }
 #about-me p {
 	width: 80%;
